# daily-reporter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.en.md  README.md  README_EMBEDDING_PROVIDERS.md  WORKFLOW_SOP.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  start-local.sh  start.sh  verify_ollama_setup.sh
.claude/skills/daily-report-manager/: SKILL.md
.claude/skills/hn-daily-report/: SKILL.md  report-template.md
.claude/skills/ph-daily-report/: SKILL.md  report-template.md
.claude/skills/twitter-daily-report/: SKILL.md  report-template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_last_tweet_id.py  003_add_memory_facts.py  003_add_user_digest.py  004_fix_embedding_dimension.py  20260201_1938_f771473dec7c_add_feishu_webhook_secret_to_users.py  20260225_add_last_item_created_at_to_topics.py  20260302_add_user_digest_id_to_deliveries.py  20260303_0914_a5e1d178682a_users_topics_redesign.py  20260305_1126_0f9c0cb2c373_remove_last_collection_timestamp_from_.py  20260305_1948_baseline_schema.py
app/: main.py
app/api/: digests.py  schemas.py  subscriptions.py  topics.py  users.py
app/core/: config.py  constants.py  http_utils.py  logging.py
app/db/: __init__.py  base.py  models.py  session.py  utils.py
app/services/: lock.py
app/services/embedding/: __init__.py  base.py  factory.py  ollama_provider.py  openai_provider.py
app/services/llm/: client.py  prompts.py
app/services/memory/: __init__.py  service.py
app/services/notifier/: delivery.py  email.py  feishu.py  renderer.py
app/services/provider/: apify_adapter.py  base.py  factory.py  mock_adapter.py  twitter_adapter.py
app/workers/: beat_schedule.py  celery_app.py  tasks.py
cli/: README.md  setup.py
cli/xndctl/: __init__.py  cli.py  client.py  config.py  context.py  schemas.py  utils.py
cli/xndctl/commands/: __init__.py  notify.py  subscription.py  topic.py  trigger.py  user.py
cli/xndctl/prompts/: __init__.py  subscription.py  topic.py  user.py
demos/: test_batch_embedding.py  test_ollama_embedding.py  test_provider_comparison.py  verify_integration.py
docs/: README.md  commands.md  contracts.md  development.md  limitations.md  quickstart.md
docs/hnx/: commands.md  contracts.md  quickstart.md
docs/phx/: commands.md  contracts.md  quickstart.md
docs/plans/: 2026-02-02-admin-interface-design.md  2026-03-04-time-window-param-design.md  2026-03-04-time-window-param.md  2026-03-05-pytest-quality-report-design.md  2026-04-23-hnx-thread-design.md  2026-04-23-hnx-thread-impl.md
drm/: __init__.py  anchors.py  cli.py  dashboard.py  dashboard_data.py  errors.py  parser.py  report_window.py  reports.py  templates.py
hnx/: algolia_client.py  cli.py  client.py  config.py  errors.py  models.py  transform.py
hnx/commands/: item.py  stories.py  thread.py
phx/: __init__.py  cli.py  client.py  config.py  errors.py  models.py  transform.py
phx/commands/: __init__.py  launches.py  product.py
scripts/: check_migration_names.py
tests/: __init__.py  conftest.py  environment_contract.py  test_api_users.py  test_contract_users_topics.py  test_db_utils.py  test_dedupe_regression.py  test_environment_contract.py  test_integration_mock.py  test_integration_twitter.py  test_lock.py  test_memory_integration.py  test_memory_service.py  test_migration_users_topics.py  test_mock_adapter.py  test_schema_delivery.py  test_tasks.py  test_thinking_json_mode.py  test_twitter_adapter.py
tests/drm/: test_cli.py  test_dashboard.py  test_dashboard_data.py  test_output_contract.py  test_parser.py  test_reports.py  test_templates.py
tests/drm/fixtures/: dashboard-data-valid.json
tests/fixtures/: users_topics.py
tests/hnx/: conftest.py  test_algolia_client.py  test_cli.py  test_client.py  test_config.py  test_errors.py  test_item_command.py  test_models.py  test_stories_command.py  test_thread_command.py  test_transform.py
tests/hnx/fixtures/: comment.json  job.json  poll.json  pollopt.json  story.json  tombstone-dead.json  tombstone-deleted.json
tests/phx/: __init__.py  conftest.py  test_cli.py  test_client.py  test_config.py  test_docs.py  test_errors.py  test_launches_command.py  test_models.py  test_packaging.py  test_product_command.py  test_transform.py
tests/skills/: __init__.py  test_daily_report_manager_scripts.py  test_hn_daily_report_scripts.py  test_ph_daily_report_scripts.py  test_report_date_scripts.py  test_twitter_daily_report_scripts.py
tests/twx/: test_cli_smoke.py  test_client.py  test_output_contract.py  test_packaging.py  test_repo_cleanup.py  test_search_command.py  test_state.py  test_transform.py  test_trending_command.py  test_user_command.py
twx/: __init__.py  cli.py  client.py  config.py  errors.py  models.py  state.py  transform.py
twx/commands/: search.py  trending.py  user.py
webui/: package-lock.json  package.json
webui/app/: globals.css  layout.tsx
webui/app/dashboard/: page.module.css  page.tsx
webui/app/digests/: page.tsx
webui/app/topics/: page.tsx
webui/app/users/: page.tsx
webui/components/dashboard/: ActivityStream.module.css  ActivityStream.tsx  MetricSparklines.module.css  MetricSparklines.tsx  SystemPulse.module.css  SystemPulse.tsx
webui/components/digests/: DeliveryTimeline.tsx  DigestInbox.tsx  DigestPreview.tsx
webui/components/layout/: CommandPalette.tsx  Sidebar.tsx  (+1 more)
webui/styles/: index.ts  theme.css  tokens.ts
(+50 files in other folders)
