[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-news-digest"
version = "0.1.0"
description = "AI-powered Twitter/X news digest system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "X News Digest Team"}
]
keywords = ["twitter", "news", "digest", "llm", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # FastAPI and web framework
    "fastapi>=0.109.0,<0.110.0",
    "uvicorn[standard]>=0.27.0,<0.28.0",
    "pydantic>=2.5.3,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",

    # Database
    "sqlalchemy>=2.0.25,<2.1.0",
    "asyncpg>=0.29.0,<0.30.0",
    "alembic>=1.13.1,<2.0.0",
    "pgvector>=0.2.4,<0.3.0",

    # Redis and Celery
    "redis>=5.0.1,<6.0.0",
    "celery>=5.3.6,<6.0.0",
    "flower>=2.0.1,<3.0.0",

    # HTTP client
    "httpx>=0.26.0,<0.27.0",

    # Environment variables
    "python-dotenv>=1.0.0,<2.0.0",

    # Logging
    "python-json-logger>=2.0.7,<3.0.0",

    # Email
    "aiosmtplib>=3.0.1,<4.0.0",
    "email-validator>=2.1.0,<3.0.0",

    # Utilities
    "python-dateutil>=2.8.2,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["app*tests"]

[project.urls]
Homepage = "https://github.com/your-org/x-news-digest"
Documentation = "https://github.com/your-org/x-news-digest/blob/main/README.md"
Repository = "https://github.com/your-org/x-news-digest"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402", "E712"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
