[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twx"
version = "0.1.0"
description = "JSON-first Twitter/X CLI wrapping twitterapi.io for agent workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "TWX Team"}
]
keywords = ["twitter", "cli", "json", "agents", "twitterapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.1.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["twx*"]

[project.scripts]
twx = "twx.cli:cli"

[project.urls]
Homepage = "https://github.com/tpiperatgod/x-news-digest"
Documentation = "https://github.com/tpiperatgod/x-news-digest/blob/main/README.md"
Repository = "https://github.com/tpiperatgod/x-news-digest"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E402", "E712"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests/twx"]
addopts = "--strict-markers"
markers = [
    "integration: marks tests that require integration-level resources",
]
